# pfy-mentat

./: .gitignore  AGENTS.md  CATEGORIZATION.md  CONTRIBUTING.md  Makefile  README.md  SUBTREES.md  TOOLS.md
bootstrap/: setup-local-agent-env.py
bootstrap/agenc/: README.md  agenc-launch  install.sh  smoke.sh
bootstrap/env/: REGISTRY.md  check_env.py  env.example
bootstrap/grok-cli/: README.md  install.sh  manifest.json
bootstrap/project-process/: README.md  init.sh  manifest.json
config/litellm/: README.md  balanced.yaml  local-only.yaml  max-performance.yaml
config/profiles/: balanced.env  local-only.env  max-performance.env
data/: tools.json
docs/: ARCHITECTURE.md  DESIGN.md  OPEN_QUESTIONS.md  TODO.md  evaluation-framework.md  scoring-summary.md
docs/adr/: 0001-process-docs-and-adr-layout.md  0002-grok-cli-primary-interface.md  0003-default-pinned-commit-tracking.md  0004-first-party-grok-bootstrap-package.md  0005-light-process-framework-not-heavy-tools.md  0006-deployment-profiles.md  0007-write-guard-mcp-layer.md  0008-one-shot-workflow.md  0009-skill-port-hybrid-strategy.md  0010-reject-agenc-as-primary-runtime.md  README.md
docs/automation/: tom-doer-monitor.md
docs/evaluation/: autonomous-ai-companies-rubric.md  knowledge-graph-cluster-overlap.md
docs/modules/: README.md  bootstrap-grok-cli.md  (+4 more)
harness/write-guard-mcp/: README.md  policy.default.yaml  pyproject.toml
harness/write-guard-mcp/src/write_guard/: __init__.py  __main__.py  audit.py  policy.py  server.py
harness/write-guard-mcp/tests/: test_policy.py
sources/: x-posts.md
(+91 files in other folders)
